@@ -245,4 +245,5 @@ Thanks to Christian Johansson for suggestions!
  * forth: made word conform to standard
  * forth: made "immediate", "no-tce" non-immediate
  * forth: made sure immediate does not toggle
- * forth: added support for #, $, % parser prefixes
+ * forth: added support for #, $, %, char parsing.
+	      e.g. #123, $d020, %1001001, 'z'
